# Aria

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
.dev/: AUDIT_DIGEST.md  CHANGELOG.md  QUICK_TODOS  api-contracts-errors-auth-audit.md  evaluation_ci_audit.md  infrastructure-data-dependencies-audit.md  minor_obvs.md  mypy.md  notes.md  notes_for_prod_or_changes.md  notes_prod_or_changes.md  path_to_release.md  product-architecture-audit.md  telemetry-audit.md
.dev/docs/: 00_project_overview.md  01_knowledge_graphs.md  02_property_graph_schema.md  03_graphrag_vs_vector_rag.md  04_gnns_overview.md  05_mcp_protocol.md  06_a2a_protocol.md  07_agent_orchestration_patterns.md  08_stateful_graphs_from_scratch.md  09_langgraph_reference.md  10_evaluation_agentic_systems.md  11_tradeoffs_and_concerns.md  quiz.html
.github/workflows/: ci.yml  nightly.yml  security.yml
api/: config.py  connections.py  deps.py  errors.py  limits.py  main.py  middleware_body_limit.py  middleware_request_id.py  middleware_telemetry.py  readiness.py
api/routers/: agents.py  impact.py  ingest.py  query.py  telemetry.py
aria/: __init__.py
aria/agents/: __init__.py  base.py  entity_extractor.py  graph_builder.py  impact_analyzer.py  ingestion_agent.py  report_generator.py  supervisor.py
aria/cli/: __init__.py  main.py
aria/cli/commands/: __init__.py  eval.py  impact.py  ingest.py  init.py  query.py  serve.py  status.py  telemetry_cmd.py
aria/contracts/: __init__.py  _strict.py  agent_messages.py  graph_entities.py  impact.py  regulation.py
aria/graph/: __init__.py  builder.py  client.py  ingestion_record.py  queries.py  schema.py
aria/health/: __init__.py  assessment.py
aria/ingestion/: __init__.py  chunker.py  pipeline.py  wiring.py
aria/ingestion/parsers/: __init__.py  pdf_parser.py  (+1 more)
aria/llm/: __init__.py  client.py
aria/observability/: __init__.py  logger.py  metrics.py  since_parse.py  telemetry_store.py
aria/orchestration/: __init__.py
aria/protocols/: __init__.py
aria/retrieval/: __init__.py  graph_retriever.py  hybrid_retriever.py  reranker.py  vector_store.py
aria/services/: __init__.py  compliance_query.py  impact_report.py
scripts/: benchmark_retrieval.py  seed_corpus.py  seed_graph.py
tests/: conftest.py  test_agent_telemetry.py  test_llm_telemetry.py  test_middleware_telemetry.py  test_telemetry_endpoints.py  test_telemetry_store.py
tests/eval/: agent_trace_analysis.py  eval_store.py  expected_api_paths.py  graphrag_vs_vector_rag.py  scrub.py  test_api_contracts.py  test_edge_cases.py  test_safety_reliability.py  test_security_audit.py  test_serialization.py  test_trajectory_eval.py
tests/fixtures/: __init__.py  api_requests.py  documents.py  entities.py  graph_payloads.py  impact_data.py  orchestration_states.py  traces.py
tests/integration/: test_end_to_end.py  test_ingestion_pipeline.py
tests/unit/: test_cli_entry.py  test_connections_strict.py  test_contract_strict.py  test_entity_extraction.py  test_graph_queries.py  test_health_assessment.py  test_hybrid_retrieval.py  test_ingestion_wiring.py  test_llm_structured.py  test_metrics.py  test_orchestration.py  test_services_compliance_query.py  test_services_impact_report.py  test_since_parse.py
(+65 files in other folders)
